syntax = "proto3";

import "validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./pbnotification";

package notifications;

message Notification {
  uint64 user_id = 1;
  Entity entity = 2;
  Status status = 4;
}

message Status{
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp received_at = 2;
  google.protobuf.Timestamp seen_at = 3;
}

message Entity {
  uint64 entity_id = 1;
  string entity_table = 2;
}
